correction bug collapse

--- a/kasa/src/styles/Error404.css
+++ b/kasa/src/styles/Error404.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 50px;
+    height: 69vh;
 }
 .error_box {
     display: flex;
