--- a/kasa/src/styles/Tags.css
+++ b/kasa/src/styles/Tags.css
@@ -7,4 +7,5 @@
     text-align: center;
     padding: 3px 10px 0 10px;
     margin-right: 10px;
+    margin-bottom: 0;
 }
