--- a/kasa/src/styles/TitreAccueil.css
+++ b/kasa/src/styles/TitreAccueil.css
@@ -38,6 +38,7 @@
     font-size: 48px;
     background-color: rgba(0, 0, 0, 0);
     margin: 16px;
+    cursor: default;
 }
 
 @media (max-width: 660px) {
